--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,11 +5,67 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Loja de Cosmeticos</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../statics/estilo.html"/>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <style>
+            *{
+                margin: 0%;
+            }
+            header{
+                text-align: center;
+                background: palevioletred;
+                margin: 0%;
+            }
+            main{
+                width: 100%;
+                height: 720px;
+            }
+            thead{
+                text-align: center;
+            }
+        </style>
     </head>
     <body>
-        <div>TODO write content</div>
+        <header>
+            <h1>Loja De Cosméticos</h1>
+        </header>
+        <main>
+            <table class="table table-light table-striped table-hover table-bordered">
+                <thead>
+                    <tr>
+                        <th>id</th>
+                        <th>Nome</th>
+                        <th>Quantidade</th>
+                        <th>Preço</th>
+                        <th>Tipo</th>
+                    </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>Cell1</td>
+                    <td>Cell2</td>
+                    <td>Cell1</td>
+                    <td>Cell2</td>
+                    <td>Cell1</td>
+                </tr>
+                </tbody>
+            </table>
+        </main>
+        <footer class="bg-light">
+            <h6><strong>Integrantes: </strong> <br>
+                Ana Beatriz<br>
+                João Gabreil <br>
+                José Higo
+            </h6>   
+            <h6><strong>Professor: </strong> <br>
+                Fernando<br>
+            </h6>
+            <h6><strong>Auxiliar do Professor: </strong> <br>
+                Carlinhos<br>
+            </h6>
+        </footer>
     </body>
 </html>
